--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 /* Global CSS Parameters */
 * { padding: 0; margin: 0; box-sizing: border-box; }
-html { font-size: 10px; font-family: 'Montserrat', sans-serif; background-color: blue; }
+html { font-size: 10px; font-family: 'Montserrat', sans-serif; background-color: #EFEFEB; }
 a { text-decoration: none; }
 .container { min-height: 100vh; width: 100%; display: flex; align-items: center; justify-content: center; }
 img { height: 100%; width: 100%; object-fit: cover; }
