--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 /* Global CSS Parameters */
 * { padding: 0; margin: 0; box-sizing: border-box; }
-html { font-size: 10px; font-family: 'Montserrat', sans-serif; background-color: #EFEFEB; }
+html { font-size: 10px; font-family: 'Montserrat', sans-serif; background-color: #E8EBF7; }
 a { text-decoration: none; }
 .container { min-height: 100vh; width: 100%; display: flex; align-items: center; justify-content: center; }
 img { height: 100%; width: 100%; object-fit: cover; }
 p { color: black; font-size: 1.5rem; margin-top: 5px; line-height: 2.5rem; font-weight: 300; letter-spacing: 0.05rem; text-align: justify; padding: 0px 20px; }
 .section_title { font-size: 4rem; font-weight: 500; color: #29323C; margin-bottom: 50px; text-transform: uppercase; letter-spacing: 0.2rem; text-align: center; }
 .section_title span.section_title_span { color: #496D96; font-weight: 700; }
-.call_to_action { display: inline-block; padding: 15px 15px; color: #B1BECD; background-color: #29323C; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); font-size: 2rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.2rem; margin-top: 200px; border-radius: 15px; transition: 0.2s ease-in-out; transition-property: box-shadow, transform; transform: scale(1); }
-.call_to_action:hover { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
-div.brand h1.brand_title { font-size: 1.3rem; text-transform: uppercase; color: #B1BECD; margin-left: 10px; }
-div.brand h1.brand_title span.brand_span { color: #496D96; }
 .dontScroll { overflow: hidden; }
 /* End Global CSS Parameters */
 /* Main Header Menu */
 section#header { position: fixed; z-index: 1000; left: 0px; top: 0px; width: 100vw; height: auto; transition: 0.3s ease-out; transition-property: top; transition-delay: 0.15s; }
-section#header div.header { min-height: 60px; background-color: #29323C; transition: 0.6s ease; }
-section#header div.header div.nav_bar { display: flex; align-items: center; justify-content: space-between; width: 100%; height: 100%; max-width: 1300px; padding: 10px 10px; }
+section#header div.header { min-height: 60px; transition: 0.6s ease; }
+section#header div.header div.nav_bar { width: auto; height: 100%; max-width: 1300px; padding: 10px 10px; margin-top: 20px; border-radius: 20px; background-color: #29323C; }
 section#header div.header div.nav_bar div.nav_list ul.nav_options { list-style: none; position: absolute; background-color: #29323C; width: 100vw; height: 100vh; left: 100%; top: 0%; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 1; transition: 0.3s ease; transition-property: left; align-self: center; }
 section#header div.header div.nav_bar div.nav_list ul.nav_options.active { left: 0%; }
 section#header div.header div.nav_bar div.nav_list ul.nav_options a { font-size: 3.5rem; font-weight: 500; letter-spacing: 0.2rem; text-decoration: none; color: #B1BECD; border-radius: 20px; text-transform: uppercase; padding: 20px; margin-top: 20px; margin-bottom: 20px; display: block; transition: 0.3s ease; transition-property: font-size, color; }
@@ -30,19 +26,19 @@ section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::after 
 section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::before { bottom: 8px; }
 section#header div.header div.nav_bar div.nav_list div.hamburger.active div.bar::before { bottom: 0px; }
 section#header div.header div.nav_bar div.nav_list div.hamburger.active div.bar::after { top: 0px; }
-section#header div.header div.progress_bar { background-color: #354b6C; height: 10px; width: 0%; position: fixed; left: 0px; bottom: 0px; transition: all 0.3s; }
+section#header div.header div.progress_bar { background-color: #29323C; height: 10px; width: 0%; position: fixed; left: 0px; bottom: 0px; transition: all 0.3s; }
 /* End Main Header Menu */
 /* Hero Section */
 section#hero div.hero { max-width: 1200px; margin: 0px auto; padding: 0px 50px; justify-content: flex-start; }
-section#hero div.hero div.page_fold { height: 230px; width: 230px; position: absolute; top: 70px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; } /* Background SVG Vector applied developed by SVGBackgrounds.com */
-section#hero div.hero div.hero_content h1.hero_title { display: block; width: fit-content; font-size: 3.8rem; position: relative; top: 180px; color: transparent; animation: text_reveal 0.5s ease forwards; animation-delay: 1s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(1) { animation-delay: 1s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(2) { animation-delay: 2s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(3) { animation: text_reveal_name 0.5s ease forwards; animation-delay: 3s; }
-section#hero div.hero div.hero_content h1.hero_title span.hero_title_box { position: absolute; top: 0px; left: 0px; height: 100%; width: 0%; background-color: #EFEFEB; animation: text_reveal_box 1s ease; animation-delay: 0.5s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(1) span.hero_title_box { animation-delay: 0.5s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(2) span.hero_title_box { animation-delay: 1.5s; }
-section#hero div.hero div.hero_content h1.hero_title:nth-child(3) span.hero_title_box { animation-delay: 2.5s; }
+section#hero div.hero div.hero_content div.hero_titles { display: flex; flex-direction: column; align-items: flex-end; justify-content: center; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title { display: block; width: fit-content; font-size: 60px; position: relative; color: transparent; animation: text_reveal 0.5s ease forwards; animation-delay: 1s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(1) { animation-delay: 1s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(2) { animation-delay: 2s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(3) { animation: text_reveal_name 0.5s ease forwards; animation-delay: 3s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title span.hero_title_box { position: absolute; top: 0px; left: 0px; height: 100%; width: 0%; background-color: #EFEFEB; animation: text_reveal_box 1s ease; animation-delay: 0.5s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(1) span.hero_title_box { animation-delay: 0.5s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(2) span.hero_title_box { animation-delay: 1.5s; }
+section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(3) span.hero_title_box { animation-delay: 2.5s; }
 section#hero div.hero div.middle { position: absolute; right: 0%; bottom: 23px; margin-right: 23px; }
 section#hero div.hero div.middle div.mouse { width: 45px; height: 75px; }
 section#hero div.hero div.middle div.mouse::before { content: ''; width: 15px; height: 15px; position: absolute; left: 50%; transform: translateX(-50%); bottom: 20px; margin-left: -8px; cursor: pointer; background-color: #29323C; border-radius: 50%; animation: mouse_scroll 3s cubic-bezier(0.75, -0.95, 0.25, 0.5) infinite; }
@@ -116,7 +112,7 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     @keyframes text_reveal_name { 100% { color: #496D96; font-weight: 700; } }
     @keyframes mouse_scroll { 0% { opacity: 0; transform: translateY(0) scale(0.5); } 10% { opacity: 1; transform: translateY(3px) scale(1); } 100% { opacity: 0; transform: translateY(-40px) scale(0.5); } }
 /* End General Keyframes */
-/* Media Query For Tablet */
+/* Media Query For Tablet */ 
 @media only screen and (min-width: 768px) {
     /* Main Header Menu */
     div.brand h1.brand_title { font-size: 2.8rem; }
@@ -126,7 +122,6 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::before { bottom: 12px; }
     /* End Main Header Menu */
     /* Hero Section */
-    section#hero div.hero div.page_fold { height: 420px; width: 420px; position: absolute; top: 100px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; }
     .call_to_action { font-size: 2.5rem; padding: 20px 40px; }
     section#hero div.hero div.hero_content h1.hero_title { font-size: 6rem; }
     section#hero div.hero div.middle { position: absolute; right: 0%; bottom: 23px; margin-right: 37px; }
@@ -189,7 +184,10 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#header div.header div.nav_bar div.nav_list div.hamburger { display: none; }
     /* End Main Header Menu */
     /* Section Home */
-    section#hero div.hero div.page_fold { height: 450px; width: 450px; position: absolute; top: 83px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; }
+    section#hero { background-image: url(./vectors/wave_hero.svg); background-repeat: no-repeat; background-size: 100%; }
+    section#hero div.hero { display: flex; flex-direction: column; justify-content: center; align-items: center; }
+    section#hero div.hero div.hero_content { width: 100%; display: flex; flex-direction: row; justify-content: space-around; }
+    section#hero div.hero div.hero_content div.company_logo { width: 350px; height: 350px; background-image: url(./images/jpgobbi_logo_withoutbg_cropped.png); background-repeat: no-repeat; background-size: contain; }
     section#hero div.hero div.middle { position: absolute; left: 50%; bottom: 5%; transform: translate(-50%, -10%); }
     section#hero div.hero div.middle div.mouse { border: 2px solid #29323C; position: absolute; left: 50%; top: 90%; transform: translate(-50%, -90%); border-radius: 25px; cursor: pointer; }
     section#hero div.hero div.middle div.mouse::before { width: 10px; height: 10px; left: 23px; animation: mouse_scroll 2s cubic-bezier(0.75, -0.95, 0.25, 0.5) infinite; }
