--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ p { color: black; font-size: 1.5rem; margin-top: 5px; line-height: 2.5rem; font-
 /* Main Header Menu */
 section#header { position: fixed; z-index: 1000; left: 0px; top: 0px; width: 100vw; height: auto; transition: 0.3s ease-out; transition-property: top; transition-delay: 0.15s; }
 section#header div.header { min-height: 60px; transition: 0.6s ease; }
-section#header div.header div.nav_bar { width: auto; height: 100%; max-width: 1300px; padding: 10px 10px; margin-top: 20px; border-radius: 50%; background-color: #29323C; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
+section#header div.header div.nav_bar { width: auto; height: 100%; max-width: 1300px; padding: 10px 10px; margin-top: 10px; border-radius: 50%; background-color: #29323C; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
 section#header div.header div.nav_bar div.nav_list ul.nav_options { list-style: none; position: absolute; background-color: #29323C; width: 100vw; height: 100vh; left: 100%; top: 0%; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 1; transition: 0.3s ease; transition-property: left; align-self: center; }
 section#header div.header div.nav_bar div.nav_list ul.nav_options.active { left: 0%; }
 section#header div.header div.nav_bar div.nav_list ul.nav_options a { font-size: 3.5rem; font-weight: 500; letter-spacing: 0.2rem; text-decoration: none; color: #B1BECD; border-radius: 20px; text-transform: uppercase; padding: 20px; margin-top: 20px; margin-bottom: 20px; display: block; transition: 0.3s ease; transition-property: font-size, color; }
@@ -42,7 +42,7 @@ section#hero div.hero div.hero_content div.hero_titles h1.hero_title span.hero_t
 section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(1) span.hero_title_box { animation-delay: 0.5s; }
 section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(2) span.hero_title_box { animation-delay: 1.5s; }
 section#hero div.hero div.hero_content div.hero_titles h1.hero_title:nth-child(3) span.hero_title_box { animation-delay: 2.5s; }
-section#hero div.hero div.middle { position: absolute; left: 50%; transform: translateX(-50%); bottom: 23px; }
+section#hero div.hero div.middle { position: absolute; left: 0%; bottom: 23px; margin-left: 23px; }
 section#hero div.hero div.middle div.mouse { width: 45px; height: 75px; }
 section#hero div.hero div.middle div.mouse::before { content: ''; width: 20px; height: 20px; position: absolute; left: 50%; transform: translateX(-50%); bottom: 20px; margin-left: -8px; cursor: pointer; background-color: #29323C; border-radius: 50%; animation: mouse_scroll 3s cubic-bezier(0.75, -0.95, 0.25, 0.5) infinite; }
 /* End Hero Section */
